--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+		<img src="https://drive.google.com/file/d/1ABiAqd7bygi_zFa6Lv8JamNvNPViS-J1/view?usp=sharing" alt="My image" width="150">
+        <h1>Avanish Kumar</h1>
+		<p><a href="https://www.linkedin.com/in/avanish-kumar-yadav-929613249?" target="_blank">LinkedIn Profile</a></p>
+	</header>
+	<section id="skills">
+		<h2>Skills</h2>
+		<p>HTML, CSS,JavaScript, Java, MySQL, MongoDB</p>
+	</section>
+	<section id="projects">
+		 <h2>Projects</h2>
+		<ul>
+			<li>Project 1-Social Media Web App Using MERN Stack</li>
+			<li>Project 2-Hex Color Generator</li>
+			<li>Project 3-Single Bike Landing Page
+</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
